--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-    <title>Randomizer</title>
+    <title>Randomizer(Beta)</title>
     <meta charset="UTF-8">
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="js/jquery-3.5.0.min.js"></script>
