--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <script type="text/javascript">
                         
                         $(document).ready(function () {
+                            console.log('sending message');
                             window.parent.postMessage('david', '*');
                         });
 
