--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         
                         $(document).ready(function () {
                             console.log('sending message');
-                            window.parent.postMessage(location.href, '*');
+                            window.parent.postMessage('david', '*');
                         });
 
                     </script>
