--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="js/jquery-3.5.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/controller.js"></script>
 </head>
 
 <body>
@@ -19,15 +20,6 @@
             <div class="active item">
                 <div class="hero-unit">
                     <h1>Test</h1><br/>
-
-
-                    <script type="text/javascript">
-                        
-                        $(document).ready(function () {
-                            window.parent.postMessage('david', '*');
-                        });
-
-                    </script>
 
                     <!--
                     <p>Ingrese los participantes en forma de lista en cada cuadro de texto</p>
