--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <div class="carousel-inner">
             <div class="active item">
                 <div class="hero-unit">
-                    <h1>Test</h1><br/>
+                    <h1>Participantes</h1><br/>
 
-                    <!--
                     <p>Ingrese los participantes en forma de lista en cada cuadro de texto</p>
 
                     <div class="row-fluid">
@@ -51,8 +50,6 @@
                             Listo!
                         </a>
                     </p>
-
-                -->
                 </div>
             </div>
             <div class="item">
